modal overlay edded

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           >
           <ul class="list site-nav">
             <li>
-              <a class="link nav-link" href="./index.html">Studio</a>
+              <a class="link nav-link curent" href="./index.html">Studio</a>
             </li>
             <li>
               <a class="link nav-link" href="./portfolio.html">Portfolio</a>
@@ -67,7 +67,9 @@
     <main>
       <section class="hero-section">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <button class="hero-button" type="button" data-modal-open>
+          Order Service
+        </button>
       </section>
 
       <section class="section">
@@ -569,5 +571,17 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
