--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
               <a class="link nav-link" href="./index.html">Studio</a>
             </li>
             <li class="site-nav-item">
-              <a class="link nav-link" href="./portfolio.html">Portfolio</a>
+              <a class="link nav-link curent" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="site-nav-item">
               <a class="link nav-link" href="">Contacts</a>
@@ -85,12 +85,19 @@
           <ul class="list examples-list">
             <li class="examples-item">
               <a class="link examples-link" href="#">
-                <img
-                  src="./images/work1.jpg"
-                  alt="Example of work"
-                  width="360"
-                  height="300"
-                />
+                <div class="examples-cover-wrap">
+                  <img
+                    src="./images/work1.jpg"
+                    alt="Example of work"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="examples-descr">
                   <h2 class="section-subtitle">
                     Banking App Interface Concept
@@ -101,12 +108,19 @@
             </li>
             <li class="examples-item">
               <a class="link examples-link" href="#">
-                <img
-                  src="./images/work2.jpg"
-                  alt="Example of work"
-                  width="360"
-                  height="300"
-                />
+                <div class="examples-cover-wrap">
+                  <img
+                    src="./images/work2.jpg"
+                    alt="Example of work"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="examples-descr">
                   <h2 class="section-subtitle">Cashless Payment</h2>
                   <p class="content-category section-text">Marketing</p>
@@ -115,12 +129,19 @@
             </li>
             <li class="examples-item">
               <a class="link examples-link" href="#">
-                <img
-                  src="./images/work3.jpg"
-                  alt="Example of work"
-                  width="360"
-                  height="300"
-                />
+                <div class="examples-cover-wrap">
+                  <img
+                    src="./images/work3.jpg"
+                    alt="Example of work"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="examples-descr">
                   <h2 class="section-subtitle">Meditation App</h2>
                   <p class="content-category section-text">App</p>
@@ -129,12 +150,19 @@
             </li>
             <li class="examples-item">
               <a class="link examples-link" href="#">
-                <img
-                  src="./images/work4.jpg"
-                  alt="Example of work"
-                  width="360"
-                  height="300"
-                />
+                <div class="examples-cover-wrap">
+                  <img
+                    src="./images/work4.jpg"
+                    alt="Example of work"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="examples-descr">
                   <h2 class="section-subtitle">Taxi Service</h2>
                   <p class="content-category section-text">Marketing</p>
@@ -143,12 +171,19 @@
             </li>
             <li class="examples-item">
               <a class="link examples-link" href="#">
-                <img
-                  src="./images/work5.jpg"
-                  alt="Example of work"
-                  width="360"
-                  height="300"
-                />
+                <div class="examples-cover-wrap">
+                  <img
+                    src="./images/work5.jpg"
+                    alt="Example of work"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="examples-descr">
                   <h2 class="section-subtitle">Screen Illustrations</h2>
                   <p class="content-category section-text">Design</p>
@@ -157,12 +192,19 @@
             </li>
             <li class="examples-item">
               <a class="link examples-link" href="#">
-                <img
-                  src="./images/work6.jpg"
-                  alt="Example of work"
-                  width="360"
-                  height="300"
-                />
+                <div class="examples-cover-wrap">
+                  <img
+                    src="./images/work6.jpg"
+                    alt="Example of work"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="examples-descr">
                   <h2 class="section-subtitle">Online Courses</h2>
                   <p class="content-category section-text">Marketing</p>
@@ -171,12 +213,19 @@
             </li>
             <li class="examples-item">
               <a class="link examples-link" href="#">
-                <img
-                  src="./images/work7.jpg"
-                  alt="Example of work"
-                  width="360"
-                  height="300"
-                />
+                <div class="examples-cover-wrap">
+                  <img
+                    src="./images/work7.jpg"
+                    alt="Example of work"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="examples-descr">
                   <h2 class="section-subtitle">Instagram Stories Concept</h2>
                   <p class="content-category section-text">Design</p>
@@ -185,12 +234,19 @@
             </li>
             <li class="examples-item">
               <a class="link examples-link" href="#">
-                <img
-                  src="./images/work8.jpg"
-                  alt="Example of work"
-                  width="360"
-                  height="300"
-                />
+                <div class="examples-cover-wrap">
+                  <img
+                    src="./images/work8.jpg"
+                    alt="Example of work"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="examples-descr">
                   <h2 class="section-subtitle">Organic Food</h2>
                   <p class="content-category section-text">Web Site</p>
@@ -199,12 +255,19 @@
             </li>
             <li class="examples-item">
               <a class="link examples-link" href="#">
-                <img
-                  src="./images/work9.jpg"
-                  alt="Example of work"
-                  width="360"
-                  height="300"
-                />
+                <div class="examples-cover-wrap">
+                  <img
+                    src="./images/work9.jpg"
+                    alt="Example of work"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="examples-descr">
                   <h2 class="section-subtitle">Fresh Coffee</h2>
                   <p class="content-category section-text">Web Site</p>
