--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,9 @@
               <a class="link nav-link" href="./index.html">Studio</a>
             </li>
             <li class="site-nav-item">
-              <a class="link nav-link curent" href="./portfolio.html">Portfolio</a>
+              <a class="link nav-link curent" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="site-nav-item">
               <a class="link nav-link" href="">Contacts</a>
