--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main>
       <section class="hero-section">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button" data-modal-open>
+        <button type="button" class="hero-button" data-modal-open>
           Order Service
         </button>
       </section>
