--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
 
     <main>
       <section class="hero-section">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button" data-modal-open>
-          Order Service
-        </button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button" data-modal-open>
+            Order Service
+          </button>
+        </div>
       </section>
 
       <section class="section">
